<resources>
    <string name="app_name">Quick Memo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">Пока пусто</string>
    <string name="description">description</string>
    <string name="sort_by">Сортировать по</string>
    <string name="date_of_created">Дата создания</string>
    <string name="date_of_last_update">Дата последного обновления</string>
    <string name="delete_all">Удалить всех</string>
    <string name="search">Поиск в заметках</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
</resources>